--- a/html/login.html
+++ b/html/login.html
@@ -8,6 +8,57 @@
   </head>
   <body>
     <div class="main">
+      <div class="left">
+        
+    <div class="slider-container">
+      <div class="slider">
+          <div class="slide" style="background-image: url('https://plus.unsplash.com/premium_photo-1683531060766-c460adea7010?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fHJlc3VtZXxlbnwwfHwwfHx8MA%3D%3D');">
+              <div class="header">
+                  <div class="logo">AMU</div>
+                  <button class="back-button">Back to website →</button>
+              </div>
+              <div class="content">
+                  <h2>Capturing Moments,<br>Creating Memories</h2>
+              </div>
+              <div class="indicators">
+                  <div class="indicator"></div>
+                  <div class="indicator"></div>
+                  <div class="indicator active"></div>
+              </div>
+          </div>
+          <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1602407294553-6ac9170b3ed0?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHJlc3VtZXxlbnwwfHwwfHx8MA%3D%3D');">
+              <div class="header">
+                  <div class="logo">AMU</div>s
+                  <button class="back-button">Back to website →</button>
+              </div>
+              <div class="content">
+                  <h2>Explore the World<br>Through Our Lens</h2>
+              </div>
+              <div class="indicators">
+                  <div class="indicator"></div>
+                  <div class="indicator active"></div>
+                  <div class="indicator"></div>
+              </div>
+          </div>
+          <div class="slide" style="background-image: url('https://media.istockphoto.com/id/1359108560/photo/resumes-on-laptop-with-glasses-resume-review-job-interview.webp?a=1&b=1&s=612x612&w=0&k=20&c=kmXx8hMjcs31dHSFJ2LFobGbBA5Ru_5Ws4oSC_T2DHs=');">
+              <div class="header">
+                  <div class="logo">AMU</div>
+                  <button class="back-button">Back to website →</button>
+              </div>
+              <div class="content">
+                  <h2>Unforgettable Adventures<br>Await You</h2>
+              </div>
+              <div class="indicators">
+                  <div class="indicator active"></div>
+                  <div class="indicator"></div>
+                  <div class="indicator"></div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+
+      </div>
       <div class="right">
         <div class="form-container">
           <h1>Create an account</h1>
@@ -52,6 +103,7 @@
         </div>
       </div>
     </div>
+    
     <script src="/js/login.js"></script>
   </body>
 </html>
